k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api-pis6to-dns-dl73e6qv.hcp.eastus.azmk8s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 4000
          #! DESPUES QUITAR ESTOS PATHS, SLO QUEDA EL API GATEWAY
          - path: /alertsandnotifications
            pathType: Prefix
            backend:
              service:
                name: alertsandnotifications
                port:
                  number: 80
          - path: /authentication
            pathType: Prefix
            backend:
              service:
                name: authentication
                port:
                  number: 80
          - path: /climatedata
            pathType: Prefix
            backend:
              service:
                name: climatedata
                port:
                  number: 80
          - path: /downloadrequests
            pathType: Prefix
            backend:
              service:
                name: downloadrequests
                port:
                  number: 80
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: media
                port:
                  number: 80
          # - path: /monitoringstations
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: monitoringstations
          #       port:
          #         number: 80
          - path: /sockets
            pathType: Prefix
            backend:
              service:
                name: sockets
                port:
                  number: 80
          - path: /systemactivities
            pathType: Prefix
            backend:
              service:
                name: systemactivities
                port:
                  number: 80
